--- a/Week 2/Assignments/code.ipynb
+++ b/Week 2/Assignments/code.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "    print('#'*80)\n",
     "    # [INFO] Be sure to change userpwds with the name of variable that you give to the list of passwords\n",
-    "    print('[INFO] '+'Number of passwords checked:',str(len(usrpwds))) \n",
+    "    print('[INFO] '+'Number of passwords checked:',str(len())) \n",
     "    print('[INFO] '+'The given rankings can be found in Users-Pwds-Chked.txt')\n",
     "    print('#'*80)"
    ]
@@ -236,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsa",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -250,12 +250,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
+   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "da5a28ea0d0681d4b38cc6a424b555f43582d77cc3786ec8475418c57a7d8b87"
+    "hash": "8c3d4d9970fc5c09c50d9318a9c7fbf4d0159e4b28833276f5678ee22bded273"
    }
   }
  },
